crates/distribution-filename/src/snapshots/distribution_filename__wheel__tests__ok_build_tag.snap
---
source: crates/distribution-filename/src/wheel.rs
expression: "WheelFilename::from_str(\"foo-1.2.3-build-python-abi-platform.whl\")"
---
Ok(
    WheelFilename {
        name: PackageName(
            "foo",
        ),
        version: Version {
            epoch: 0,
            release: [
                1,
                2,
                3,
            ],
            pre: None,
            post: None,
            dev: None,
            local: None,
        },
        python_tag: [
            "python",
        ],
        abi_tag: [
            "abi",
        ],
        platform_tag: [
            "platform",
        ],
    },
)
