crates/distribution-filename/src/snapshots/distribution_filename__wheel__tests__ok_single_tags.snap
---
source: crates/distribution-filename/src/wheel.rs
expression: "WheelFilename::from_str(\"foo-1.2.3-foo-bar-baz.whl\")"
---
Ok(
    WheelFilename {
        distribution: PackageName(
            "foo",
        ),
        version: Version {
            epoch: 0,
            release: [
                1,
                2,
                3,
            ],
            pre: None,
            post: None,
            dev: None,
            local: None,
        },
        python_tag: [
            "foo",
        ],
        abi_tag: [
            "bar",
        ],
        platform_tag: [
            "baz",
        ],
    },
)
